# sanitize

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  cliff.toml  pyproject.toml
.github/workflows/: main.yml
examples/: 2023-07-22_120312E2M3121K00UN6S.json  2023-07-22_152D00539000.json  custom_method.py
scripts/: explain.py
tests/: test_nvme_sanitizes.py  test_shred_sanitizes.py
tests/mock_data/: nvme_mocks.py  shred_mocks.py
usody_sanitize/: __init__.py  cmd_client.py  commands.py  config.py  erasure.py  exceptions.py  main.py  methods.py  sanitize.py  steps.py  utils.py
usody_sanitize/schemas/: __init__.py  definition.py  devices.py  erasure.py  export_data.py  sanitize.py
