[tool.poetry]
name = "usody-sanitize"
version = "0.1.3-beta4"

description = "A tool to securely erase/wipe data on disks HDD and SSD with a proper sanitization process."
repository = "https://github.com/usody/sanitize"
authors = ["blkpws <me@blkpws.xyz>"]
readme = ["CHANGELOG.md", "README.md"]
license = "GNU"

[tool.poetry_bumpversion.file."usody_sanitize/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4"
jinja2 = "^3.1"
typer = "^0.7"
mkdocs-material = "^9.0"
mdx-include = "^1.4"
mkdocs-markdownextradata-plugin = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = "^7.3"

[tool.poetry.scripts]
sanitize = "usody_sanitize.cmd_client:run_cmd"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
